applications/dev/values/qdrant/network-policy.yaml
# Policy allowing incoming traffic to come only from the same namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: qdrant-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
      app.kubernetes.io/instance: qdrant
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: unique
  policyTypes:
    - Ingress
